[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/rubbish.gd" type="Script" id=1]
[ext_resource path="res://scripts/RubbishBag.gd" type="Script" id=2]
[ext_resource path="res://assets/rubbish/bag.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.7524, 50.547 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 321.736 )

[node name="Rubbish" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TimeLabel" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 897.0
margin_top = 11.0
margin_right = 953.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Time: 20"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MissLabel" type="Label" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 883.0
margin_top = 27.0
margin_right = 945.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Missed: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bag" type="Node2D" parent="." index="1"]

position = Vector2( 100, 50 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Bag" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Area2D" type="Area2D" parent="Bag" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bag/Area2D" index="0"]

position = Vector2( 70.9802, 0.358482 )
shape = SubResource( 1 )

[node name="FailArea" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FailArea" index="0"]

position = Vector2( -18, 301 )
shape = SubResource( 2 )

[node name="GameTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="Instructions" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 300.0
margin_right = 340.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Instructions" type="Label" parent="Instructions/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 423.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Clean up all the rubbish."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions2" type="Label" parent="Instructions/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 423.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Move the mouse to move the bag. Catch the rubbish to remove it."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions3" type="Label" parent="Instructions/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 423.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Miss 3 pieces and your boss will get mad!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Instructions/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 423.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Let's Go!"
flat = false
align = 1

[connection signal="area_entered" from="Bag/Area2D" to="Bag" method="_on_Area2D_area_entered"]

[connection signal="area_entered" from="FailArea" to="." method="_on_FailArea_area_entered"]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="pressed" from="Instructions/VBoxContainer/Button" to="." method="_on_Button_pressed"]


